Fixed a weird error with a filed duplicating itself, also added a gap between the headers in the search bar

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -35,7 +35,7 @@
 .locations h4, .amenities h4 {
     font-weight: 400;
     font-size: 14px;
-    margin-top: 0;
+    margin-top: 5px;
 }
 .locations ul {
     position: relative;
